[gd_scene load_steps=14 format=3 uid="uid://c3060v0xiijx4"]

[ext_resource type="Texture2D" uid="uid://cmgjqfkohbvvn" path="res://resources/ui/LIGHT/LIGHTgeneralbutton.png" id="1_8t08e"]
[ext_resource type="FontFile" uid="uid://bd5jlefpj0cvq" path="res://resources/ui/runescape_uf.ttf" id="1_j3bqk"]
[ext_resource type="Script" uid="uid://bnufschp8ikoh" path="res://scripts/StartMenu.gd" id="1_yx83k"]
[ext_resource type="FontFile" uid="uid://43xl6ont5uwe" path="res://resources/ui/Early GameBoy.ttf" id="3_yx83k"]
[ext_resource type="Texture2D" uid="uid://dg3o57hoy7eel" path="res://resources/ui/LIGHT/LIGHTbackground.png" id="5_lynlw"]

[sub_resource type="Gradient" id="Gradient_fx3ca"]
offsets = PackedFloat32Array(0.00649351, 1)
colors = PackedColorArray(0.435294, 0.407843, 0.478431, 1, 0.709804, 0.619608, 0.564706, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j3bqk"]
gradient = SubResource("Gradient_fx3ca")
fill_from = Vector2(0, 0.00458716)

[sub_resource type="LabelSettings" id="LabelSettings_lynlw"]
font = ExtResource("1_j3bqk")
font_size = 220
font_color = Color(1, 0.729412, 0.537255, 1)
outline_size = 20
outline_color = Color(0.647059, 0.552941, 0.537255, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yx83k"]
font = ExtResource("3_yx83k")
font_size = 15
font_color = Color(0.65, 0.556075, 0.5395, 0.392157)

[sub_resource type="LabelSettings" id="LabelSettings_j3bqk"]
font = ExtResource("3_yx83k")
font_color = Color(0.996078, 0.960784, 0.917647, 1)

[sub_resource type="LabelSettings" id="LabelSettings_h1lxu"]
font = ExtResource("3_yx83k")
font_color = Color(0.71, 0.622433, 0.568, 0.392157)

[sub_resource type="LabelSettings" id="LabelSettings_d48hf"]
font = ExtResource("1_j3bqk")
font_size = 40
font_color = Color(0.792157, 0.741176, 0.678431, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yrm6t"]
font = ExtResource("3_yx83k")
font_color = Color(0.435294, 0.407843, 0.478431, 1)

[node name="Start" type="Control"]
custom_minimum_size = Vector2(1200, 1000)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_yx83k")
disabled_buttons = [0, 2]

[node name="Background Container" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="Background Container"]
custom_minimum_size = Vector2(1200, 1000)
layout_mode = 0
offset_right = 1200.0
offset_bottom = 1000.0
texture = SubResource("GradientTexture2D_j3bqk")

[node name="Title" type="Label" parent="Background Container"]
layout_mode = 0
offset_left = 64.0
offset_top = 88.0
offset_right = 587.0
offset_bottom = 308.0
text = "FelGen"
label_settings = SubResource("LabelSettings_lynlw")

[node name="Label" type="Label" parent="Background Container"]
layout_mode = 0
offset_left = 72.0
offset_top = 264.0
offset_right = 230.0
offset_bottom = 283.0
text = "BY KANAPURO"
label_settings = SubResource("LabelSettings_yx83k")

[node name="ButtonContainer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ContinuePlayButton" type="TextureRect" parent="ButtonContainer"]
layout_mode = 0
offset_left = 64.0
offset_top = 344.0
offset_right = 435.0
offset_bottom = 408.0
texture = ExtResource("1_8t08e")

[node name="NewPlayButton" type="TextureRect" parent="ButtonContainer"]
layout_mode = 0
offset_left = 64.0
offset_top = 432.0
offset_right = 435.0
offset_bottom = 496.0
texture = ExtResource("1_8t08e")

[node name="CreditsButton" type="TextureRect" parent="ButtonContainer"]
layout_mode = 0
offset_left = 64.0
offset_top = 608.0
offset_right = 435.0
offset_bottom = 672.0
texture = ExtResource("1_8t08e")

[node name="ExitButton" type="TextureRect" parent="ButtonContainer"]
layout_mode = 0
offset_left = 64.0
offset_top = 696.0
offset_right = 435.0
offset_bottom = 760.0
texture = ExtResource("1_8t08e")

[node name="SettingsButton" type="TextureRect" parent="ButtonContainer"]
layout_mode = 0
offset_left = 64.0
offset_top = 520.0
offset_right = 435.0
offset_bottom = 584.0
texture = ExtResource("1_8t08e")

[node name="ContinuePlayLabel" type="Label" parent="ButtonContainer"]
layout_mode = 0
offset_left = 128.0
offset_top = 368.0
offset_right = 376.0
offset_bottom = 391.0
text = "CONTINUE PLAYING"
label_settings = SubResource("LabelSettings_j3bqk")

[node name="NewPlayLabel" type="Label" parent="ButtonContainer"]
layout_mode = 0
offset_left = 144.0
offset_top = 456.0
offset_right = 368.0
offset_bottom = 479.0
text = "START NEW WORLD"
label_settings = SubResource("LabelSettings_j3bqk")

[node name="CreditsLabel" type="Label" parent="ButtonContainer"]
layout_mode = 0
offset_left = 112.0
offset_top = 632.0
offset_right = 392.0
offset_bottom = 655.0
text = "VIEW CONTRIBUTIONS"
label_settings = SubResource("LabelSettings_j3bqk")

[node name="ExitLabel" type="Label" parent="ButtonContainer"]
layout_mode = 0
offset_left = 184.0
offset_top = 720.0
offset_right = 320.0
offset_bottom = 743.0
text = "EXIT GAME"
label_settings = SubResource("LabelSettings_j3bqk")

[node name="SettingsLabel" type="Label" parent="ButtonContainer"]
layout_mode = 0
offset_left = 136.0
offset_top = 544.0
offset_right = 368.0
offset_bottom = 567.0
text = "ADJUST SETTINGS"
label_settings = SubResource("LabelSettings_j3bqk")

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 972.0
offset_right = 337.0
offset_bottom = 995.0
text = "Version %DISPLAYERROR"
label_settings = SubResource("LabelSettings_h1lxu")

[node name="Contributions" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 256.0
offset_right = 1152.0
offset_bottom = 960.0
texture = ExtResource("5_lynlw")

[node name="ExitButton" type="Button" parent="Contributions"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 39.0
text = "X"

[node name="ScrollContainer" type="ScrollContainer" parent="Contributions"]
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 504.0
offset_bottom = 696.0

[node name="VBoxContainer" type="VBoxContainer" parent="Contributions/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="Contributions/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "This will hold our future beloved contributors! Join our Discord server to collaborate and meet fellow players!"
label_settings = SubResource("LabelSettings_d48hf")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Title" type="Label" parent="Contributions"]
layout_mode = 0
offset_left = 104.0
offset_top = 8.0
offset_right = 416.0
offset_bottom = 31.0
text = "BELOVED CONTRIBUTORS"
label_settings = SubResource("LabelSettings_yrm6t")
